# Gerador_Scripts

./: .gitignore  Dockerfile  README.md  docker-compose.yml  playbook.yml  pyproject.toml
.github/workflows/: checks.yml
Virtec/: testeee_VL8.txt
Virtec/Virloc8/: Clienteteste_VL8.txt
Virtec/Virloc8/Cliente/April/: teste_VL8.txt
Virtec/Virloc8/Cliente/ArcelorMittal/: ArcelorMittal_Veic_Operacional_VL8.txt  ArcelorMittal_Veic_Viagem_VL8.txt
Virtec/Virloc8/Cliente/Bayer/: test_VL8.txt
Virtec/Virloc8/Cliente/CPFL/: test_svn_VL8.txt
Virtec/Virloc8/Cliente/Expresso Nepomuceno/: cpfl_VL8.txt
api_copiloto/: Gerar_Perfil.py  copiloto_functions.py  functions.py  git_api.py  main.py  testeee  testeee_VL8.txt  validate.py
api_copiloto/.github/workflows/: pipeline.yml
api_copiloto/backend/: copiloto_functions.py  git_api.py  main.py
api_copiloto/frontend/templates/: index.html  popup.html  submit.html
api_copiloto/funções copiloto/: Rotas SP.txt  aceleracao.txt  conducao ininterrupta.txt  desaceleracao.txt  discretas.txt  excesso rpm.txt  excesso velocidade.txt  fim.txt  inicio.txt  limpador parabrisa.txt  mifare.txt
api_copiloto/funções copiloto/VC5/: aceleracao.txt  cercas.txt  discretas.txt  inicio.txt  sleep.txt
api_copiloto/funções copiloto/VC7/: faixas RPM.txt  fim.txt  inicio.txt  limpador parabrisa.txt  log.txt  parada motor ligado.txt  tracking.txt
api_copiloto/funções copiloto/VL10/: fim.txt  parada motor ligado.txt
api_copiloto/funções copiloto/VL12/: aceleracao.txt  conducao ininterrupta.txt  discretas.txt  inicio.txt  limpador parabrisa.txt  log.txt  tracking.txt
api_copiloto/funções copiloto/VL8/: faixas RPM.txt  fim.txt  horimetro e tempo mov.txt  inicio.txt  parada motor ligado.txt  tracking.txt
api_copiloto/js/: env.js  script.js
api_copiloto/static/css/: styles.css
api_copiloto/templates/: index.html  popup.html  submit.html
tests/: test.py  test_func_main.py  test_github_api.py  test_rotas_api.py  test_validate.py  testes.py
(+24 files in other folders)
