[tool.poetry]
name = "api-copiloto"
version = "0.1.0"
description = ""
authors = ["Guilherme Brida <guilherme.brida@crearesistemas.com.br>"]
readme = "README.md"
packages = [{include = "api_copiloto"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
pytest = "^7.4.0"
gitpython = "^3.1.31"
python-dotenv = "^1.0.0"
python-decouple = "^3.8"
requests = "^2.31.0"
pygithub = "^1.59.0"
flask-testing = "^0.8.1"
pysvn = "^0.1.0"
pycryptodome = "^3.18.0"
aes-pkcs5 = "^1.0.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
black = {version = "^23.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
