[tool.poetry]
name = "api-copiloto"
version = "0.1.0"
description = ""
authors = ["Guilherme Brida <guilherme.brida@crearesistemas.com.br>"]
readme = "README.md"
packages = [{include = "api_copiloto"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
python-decouple = "^3.8"
requests = "^2.31.0"
flask-testing = "^0.8.1"
requests-mock = "^1.11.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
black = {version = "^22.1.0", allow-prereleases = true}
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
